# driverbox

./: CLAUDE.md
icons/: ABS1.png~  ABS3.png~  Lights_Low1.png~  Lights_Low2.png~  Lights_Low4.png~  Parking_Brake1.png~  Parking_Brake2.png~  Range_Ha.png~  cruise_disable2.png~  diff_locked2.png~  esc_green.png~  esc_grey.png~  hornA1.png~  hornA2.png~
scripts/: png_to_lvgl.py
stmf7-folder/: .mxproject  CMakeLists.txt  STM32F746NGHx_FLASH.ld  stmf7-folder.ioc
stmf7-folder/Core/Inc/: gamepad.h  lv_conf.h  lv_port_disp.h  lv_port_indev.h  sai.h  sdram.h  spdifrx.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h  ui_screens.h
stmf7-folder/Core/Src/: adc.c  dcmi.c  dma2d.c  eth.c  fmc.c  freertos.c  gamepad.c  gpio.c  i2c.c  ltdc.c  lv_port_disp.c  lv_port_indev.c  main.c  quadspi.c  rtc.c  sai.c  sdmmc.c  sdram.c  spdifrx.c  spi.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  tim.c  ui_screens.c  usart.c
stmf7-folder/Core/Src/images/: img_abs_off.c  img_abs_on.c  img_diff_locked.c  img_diff_open.c  img_esc_off.c  img_esc_on.c  img_haz1.c  img_haz2.c  img_lights_high.c  img_lights_off.c  img_lights_on.c  img_pbrake_off.c  img_pbrake_on.c  img_range.c
stmf7-folder/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_custom_hid_if.c  usbd_custom_hid_if.h  usbd_desc.c
stmf7-folder/cmake/stm32cubemx/: CMakeLists.txt
